--- a/examples/with-echo.css
+++ b/examples/with-echo.css
@@ -15,7 +15,7 @@
 
 [tg-command="/echo (.+)"], .tg-regex {
   /* echobot */
-  tg-method: sendMessage text $1
+  tg-method: sendMessage text $1;
 }
 
 [tg-command="/photo"] {
